tests/mm0_mmu/fail/bad-sort4213.mmu
-- bad modifier order
(sort s4213 free strict pure provable)